# tynmaze-fps

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build-web.sh  shell_minimal.html
dust/: tynmaze.c
dust/tiles/: README.md  create-tileatlas.sh  cut-tileset.sh
pub/web/: index.data  index.html  index.js  index.wasm
res/: maze.fs  maze.vs
res/models/: gun.glb  sword.glb
src/: dust.h  main.c  main.h  root.h  tynmath.c  tynmath.h  weapon.c  weapon.h
